--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,1 +1,10 @@
-<button bindtap="handlePayment">微信支付</button>
+<!-- <button bindtap="handlePayment">微信支付</button> -->
+<view class="dish-container">
+  <view class="dish-item" wx:for="{{dishList}}" wx:key="index" >
+    <image class="dish-img" mode="aspectFill" src="{{item.imgUrl?item.imgUrl:'../../images/dish-nopic.png'}}"></image>
+    <view class="dish-title">{{item.name}}</view>
+    <view class="price">
+      <text class="account">{{item.price/100}}元 </text><text class="unit">/斤</text>
+    </view>
+  </view>
+</view>
