--- a/miniprogram/pages/record/record.wxml
+++ b/miniprogram/pages/record/record.wxml
@@ -3,4 +3,12 @@
   <view data-i="2" bindtap="handleNav" class="{{active == 2? 'record_nav_item active':'record_nav_item'}}">近一月</view>
   <view data-i="3" bindtap="handleNav" class="{{active == 3? 'record_nav_item active':'record_nav_item'}}">近三月</view>
 </view>
-
+<view class="record_list">
+  <view class="record_list_item" wx:for="{{list.items}}">
+    <view class="record_list_item_store">门店：{{item.commercialName}}</view>
+    <view class="record_list_item_add">充值编号：{{item.id}}</view>
+    <view class="record_list_item_add">充值金额：{{item.addValue}}元</view>
+    <view class="record_list_item_add">余额：{{item.endValue}}元</view>
+  </view>
+</view>
+<image src="/images/404.png" wx:if="{{list.items.length == 0}}" class="notfound" mode="aspectFit"></image>
