--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,4 +1,20 @@
-<!-- <button bindtap="handlePayment">微信支付</button> -->
+<view class="dish_header">
+  <image class="dish_header_title" style="{{'top:' + top+'px'}}" mode="widthFix" src="/images/store.png"></image>
+  <view class="dish_header_position">
+    <view class="dish_header_position_title">地址:</view>
+    <view>
+      <view class="dish_header_position_item">
+        肖新星（总店）:璧山区壁城街道新生街52号
+      </view>
+      <view class="dish_header_position_item">
+        肖新星北街店 :璧山区壁城街道新生街52号
+      </view>
+    </view>
+  </view>
+</view>
+<view class="{{showHeader?'small_dish_header':'small_dish_header hide'}}">
+  <image class="dish_header_title" style="{{'top:' + top+'px'}}" mode="widthFix" src="/images/store.png"></image>
+</view>
 <view class="dish-container">
   <view class="dish-item" wx:if="{{item.name!='微信小程序支付'}}" wx:for="{{dishList}}" wx:key="index" >
     <image class="dish-img" mode="aspectFill" src="{{item.imgUrl?item.imgUrl:'../../images/dish-nopic.png'}}"></image>
