--- a/miniprogram/pages/pay/pay.wxss
+++ b/miniprogram/pages/pay/pay.wxss
@@ -3,6 +3,7 @@
   padding: 0 100rpx;
   box-sizing: border-box;
 }
+
 .pay-input {
   margin-top: 100rpx;
   width: 100%;
@@ -10,11 +11,12 @@
   height: 100rpx;
   border-radius: 5px;
   display: block;
-  padding:0 100rpx;
+  padding: 0 100rpx;
   box-sizing: border-box;
   position: relative;
 }
-.pay-input::before{
+
+.pay-input::before {
   content: '￥';
   position: absolute;
   font-size: 60rpx;
@@ -22,32 +24,38 @@
   color: #999999;
   top: calc(50% - 40rpx);
 }
-.pay_discounts{
+
+.pay_discounts {
   width: 100%;
   text-align: left;
   margin: 30rpx 0;
 }
-.pay_discounts_title{
+
+.pay_discounts_title {
   font-size: 26rpx;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: #ff6b6b;
   font-weight: bold;
 }
-.pay_discounts_item{
+
+.pay_discounts_item {
   margin: 10rpx 0;
   color: #333;
   font-weight: bold;
   border-bottom: 1px dashed #999;
   padding-bottom: 20rpx;
 }
-.pay_discounts_item_title{
+
+.pay_discounts_item_title {
   font-size: 26rpx;
 }
-.pay_discounts_item_account{
+
+.pay_discounts_item_account {
   font-size: 26rpx;
   margin-left: 20rpx;
 }
-.pay_end_account{
+
+.pay_end_account {
   font-size: 40rpx;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   text-align: center;
@@ -55,17 +63,22 @@
   margin-top: 100rpx;
   color: #ff6b6b;
 }
-.pay_end_account text:nth-last-of-type(1){
+
+.pay_end_account text:nth-last-of-type(1) {
   margin-top: 10rpx;
 }
-.pay_controls,.pay_login_btn{
+
+.pay_controls,
+.pay_login_btn {
+  width: 300rpx;
   position: fixed;
   bottom: 200rpx;
   left: 0;
   right: 0;
   margin: 0 auto;
 }
-.pay_tips{
+
+.pay_tips {
   position: fixed;
   bottom: 100rpx;
   left: 0;
@@ -76,31 +89,37 @@
   display: flex;
   justify-content: center;
 }
-.pay_tips_a{
+
+.pay_tips_a {
   color: #2e86de;
 }
-.notfound{
+
+.notfound {
   width: 80vw;
   display: block;
   margin: 0 auto;
 }
-.pay_login_btn button{
+
+.pay_login_btn button {
   font-size: 26rpx;
 }
-.pay_notice{
+
+.pay_notice {
   margin-top: 10rpx;
   font-size: 26rpx;
   color: #333;
 }
-.pay_pwd_container{
+
+.pay_pwd_container {
   width: 100vw;
   height: 100vh;
   position: fixed;
   left: 0;
   top: 0;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
 }
-.pay_pwd{
+
+.pay_pwd {
   position: absolute;
   width: 70vw;
   left: 0;
@@ -113,35 +132,53 @@
   box-sizing: border-box;
   padding: 0 40rpx;
 }
-.pay_pwd input{
+
+.pay_pwd input {
   border: 1px solid #eee;
   width: 100%;
   height: 80rpx;
   text-align: center;
-  font-size:30rpx;
+  font-size: 30rpx;
   margin-top: 20rpx;
 }
-.pay_pwd_title{
+
+.pay_pwd_title {
   text-align: center;
   line-height: 80rpx;
   font-size: 28rpx;
 }
-.pay_pwd_account{
+
+.pay_pwd_account {
   text-align: center;
   font-size: 60rpx;
   line-height: 80rpx;
 }
-.pay_pwd_icon{
+
+.pay_pwd_icon {
   position: absolute;
   left: 10rpx;
   top: 10rpx;
 }
-.pay_methods{
+
+.pay_methods {
   width: 100%;
   height: 100%;
   padding: 30rpx;
   box-sizing: border-box;
 }
-.pay_methods_item{
-  height: 80rpx;
+
+.pay_methods_item {
+  height: 140rpx;
+  line-height: 140rpx;
+  padding: 0 40rpx;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #999;
+}
+
+.pay_methods_item_img {
+  width: 60rpx;
+}
+.pay_methods_item_title{
+  margin-left: 40rpx;
 }
