--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -6,7 +6,8 @@
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 400rpx;
-  border-radius: 5px 5px 0 0;
+  border-radius: 10px 10px 0 0;
+  transform: translateY(-20rpx);
   position: relative;
   background-color: #fff;
 }
@@ -79,13 +80,20 @@
   color: #fff;
   margin-top: 160rpx;
   display: flex;
+  align-items: start;
 }
 .dish_header_position_title{
-  font-size: 26rpx;
+  font-size: 24rpx;
+  vertical-align: top;
 }
 .dish_header_position_item{
   font-size: 24rpx;
   margin-bottom: 10rpx;
   margin-left: 10rpx;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.tel{
+  margin-top: 10rpx;
+  color: #fff;
+  font-size: 26rpx;
 }
