--- a/miniprogram/pages/pay/pay.wxml
+++ b/miniprogram/pages/pay/pay.wxml
@@ -1,5 +1,5 @@
 <view class="pay_container" wx:if="{{show}}">
-  <input type="digit" bindinput="handleInput" placeholder="请输入" class="pay-input" />
+  <input type="digit" bindinput="handleInput" placeholder="请输入买单金额" class="pay-input" />
   <view class="pay_notice">付款前请先与商家确认买单金额</view>
 
   <view class="pay_end_account" wx:if="{{account}}">
@@ -14,8 +14,8 @@
     </navigator>
   </view>
 </view>
+<image src="/images/404.png" wx:if="{{showLog}}" class="notfound" mode="aspectFit"></image>
 <view class="pay_login_btn" wx:if="{{showLog}}">
-  <image src="/images/404.png" class="notfound" mode="aspectFit"></image>
   <navigator url="/pages/login/login">
     <button type="primary">请先登录</button>
   </navigator>
@@ -30,7 +30,7 @@
   round="{{true}}"
 >
   <view class="pay_methods">
-    <view class="pay_methods_item" data-i="1" bindtap="choosePayment">
+    <view class="pay_methods_item" wx:if="{{userInfo.level}}" data-i="1" bindtap="choosePayment">
       <image src="/images/wallet.png" class="pay_methods_item_img" mode="widthFix"></image>
       <text class="pay_methods_item_title">余额支付(可用余额{{userInfo.remainValue}}元)</text>
     </view>
@@ -46,6 +46,6 @@
     <icon class="pay_pwd_icon" bindtap="handlePwd" color="#d2dae2" type="cancel" size="30"></icon>
     <view class="pay_pwd_title">请输入支付密码</view>
     <view class="pay_pwd_account">￥{{account}}</view>
-    <input type="number"  password="{{true}}" maxlength="6" bindinput="inputPwd" />
+    <input type="number" focus="{{isFocus}}"  password="{{true}}" maxlength="6" bindinput="inputPwd" />
   </view>
 </view>
