--- a/miniprogram/pages/pay/pay.wxss
+++ b/miniprogram/pages/pay/pay.wxss
@@ -61,7 +61,7 @@
   text-align: center;
   font-weight: bold;
   margin-top: 100rpx;
-  color: #ff6b6b;
+  color: #de1c31;
 }
 
 .pay_end_account text:nth-last-of-type(1) {
