--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -25,6 +25,11 @@
       <text>我的钱包</text>
       <image src="/images/arrow.png" class="arrow"></image>
     </view>
+    <view class="nav_item" data-i='6' bindtap="handleRouter">
+      <image src="/images/location.png" class="item_img"></image>
+      <text>我的地址</text>
+      <image src="/images/arrow.png" class="arrow"></image>
+    </view>
     <view class="nav_item" data-i='3' bindtap="handleRouter">
       <image src="/images/ticket.png" class="item_img"></image>
       <text>我的优惠券</text>
