--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,41 +1,88 @@
-<view class="dish_header">
-  <image class="dish_header_title" style="{{'top:' + top+'px'}}" mode="widthFix" src="/images/store.png"></image>
-  <view class="dish_header_position">
-    <view class="dish_header_position_title">地址:</view>
-    <view>
-      <view class="dish_header_position_item">
-        肖新星（总店）:重庆市璧山区壁城街道新生街52号
-      </view>
-      <view class="dish_header_position_item">
-        肖新星北街店 :重庆市璧山区壁铜路118号
+<view class="dish-box-container">
+
+  <view class="dish_header">
+    <image class="dish_header_title" style="{{'top:' + top+'px'}}" mode="widthFix" src="/images/store.png"></image>
+    <view class="dish_header_position">
+      <view class="dish_header_position_title">地址:</view>
+      <view>
+        <view class="dish_header_position_item">
+          肖新星（总店）:重庆市璧山区壁城街道新生街52号
+        </view>
+        <view class="dish_header_position_item">
+          肖新星北街店 :重庆市璧山区壁铜路118号
+        </view>
       </view>
     </view>
-  </view>
-  <view class="tel">
-    联系电话：159-9890-8949
-  </view>
-</view>
-<view class="{{showHeader?'small_dish_header':'small_dish_header hide'}}">
-  <image class="dish_header_title" style="{{'top:' + top+'px'}}" mode="widthFix" src="/images/store.png"></image>
-</view>
-<view class="dish-container">
-  <view class="dish-left-nav">
-    <view class="{{active == index ? 'dish-left-nav-item active' : 'dish-left-nav-item'}}" wx:for="{{navList}}"
-      wx:key="index" bindtap="handleNav" data-i="{{index}}">
-      {{item.name}}
+    <view class="tel">
+      联系电话：159-9890-8949
     </view>
   </view>
-  <view class="dish-container-list">
-    <view class="dish-container-list-item" wx:for="{{dishList}}" wx:key="index">
-      <image src="{{item.smallImgUrls[0]}}" class="dish-item-image" mode="widthFix"></image>
-      <view class="dish-info">
-        <view class="dish-name">{{item.name}}</view>
-        <view class="dish-price">￥{{item.marketPrice}}</view>
-        <image src="/images/add.png" mode="widthFix" class="dish-list-add"></image>
+  <view class="{{showHeader?'small_dish_header':'small_dish_header hide'}}">
+    <image class="dish_header_title" style="{{'top:' + top+'px'}}" mode="widthFix" src="/images/store.png"></image>
+  </view>
+  <view class="dish-container">
+    <view class="dish-left-nav">
+      <view class="{{active == index ? 'dish-left-nav-item active' : 'dish-left-nav-item'}}" wx:for="{{navList}}"
+        wx:key="index" bindtap="handleNav" data-i="{{index}}">
+        {{item.name}}
+      </view>
+    </view>
+    <view class="dish-container-list">
+      <view class="dish-container-list-item" wx:for="{{dishList}}" wx:key="index">
+        <image src="{{item.smallImgUrls[0]}}" class="dish-item-image" mode="widthFix"></image>
+        <view class="dish-info">
+          <view class="dish-name">{{item.name}}</view>
+          <view class="tags">
+            <text
+              wx:if="{{item.dishPropertyTypeInfos[0].properties[0].name}}">{{item.dishPropertyTypeInfos[0].properties[0].name}}</text>
+          </view>
+          <view class="dish-price">￥{{item.marketPrice}}</view>
+          <view class="dish-control">
+            <!-- 减去 -->
+            <image wx:if="{{item.totalNum}}" src="/images/minus.png" mode="widthFix" class="dish-list-add" data-i='-1'
+              data-index="{{index}}" data-item='{{item}}' bindtap="handleCarDish"></image>
+            <text wx:if="{{item.totalNum}}" class="dish-num">{{item.totalNum}}</text>
+            <!-- 加上 -->
+            <image src="/images/add.png" mode="widthFix" class="dish-list-add" data-i='1' data-index="{{index}}"
+              data-item='{{item}}' bindtap="handleCarDish"></image>
+          </view>
+        </view>
       </view>
     </view>
   </view>
 </view>
 <view class="shop-car">
-  
+  <view>
+    <van-icon bindtap="handleShowShopCar"
+      name="{{shopCarDishList.data.length!=0?'/images/goods.png':'/images/nogoods.png'}}" class="shop-car-pic"
+      info='{{totalNum}}' size='30px' />
+    <view class="shop-car-price">
+      <view>￥{{totalPrice}}</view>
+      <view>另需配送费￥1.5</view>
+    </view>
+  </view>
+  <button class="{{totalNum?'active-button pay-button':'pay-button'}}">去结算</button>
 </view>
+<van-popup show="{{ showShopCar }}" position="bottom"
+  custom-style="{{'height:'+shopCarDishList.data.length* 200 +'rpx'}}" close-on-click-overlay="{{tapClose}}"
+   bind:close="onClose" round="{{true}}">
+  <view class="shop-car-container">
+    <view class="shop-car-item" wx:for="{{shopCarDishList.data}}" wx:key="index">
+      <image src="{{item.dishImgUrl}}" mode="scaleToFill" class="shop-car-item-img"></image>
+      <view class="shop-car-item-info">
+        <view>{{item.name}}</view>
+        <view>
+          {{item.dishPropertyTypeInfos[0].properties[0].name?'('+item.dishPropertyTypeInfos[0].properties[0].name+')':''}}
+        </view>
+        <view>￥{{item.price}}</view>
+      </view>
+      <view class="shop-car-item-control">
+        <!-- 减去 -->
+        <image src="/images/minus.png" mode="widthFix" class="dish-list-add"></image>
+        <text class="dish-num">{{item.totalNum}}</text>
+        <!-- 加上 -->
+        <image src="/images/add.png" mode="widthFix" class="dish-list-add"></image>
+      </view>
+    </view>
+  </view>
+</van-popup>
