--- a/miniprogram/pages/shopCar/shopCar.wxss
+++ b/miniprogram/pages/shopCar/shopCar.wxss
@@ -57,6 +57,7 @@
   border-radius: 10rpx;
   background-color: #fff;
   box-shadow: 5px 5px 10px #eee;
+  margin-bottom: 100rpx;
 }
 .shop-car-dish-item{
   margin-top: 10rpx;
@@ -94,4 +95,33 @@
   position: absolute;
   right: 0;
   top: calc(50% - 12px);
+}
+.other-fee view{
+  font-size: 24rpx;
+  color: #333;
+  margin: 20rpx 0;
+  display: flex;
+  justify-content: space-between;
+}
+.send-fee{
+  padding-bottom: 20rpx;
+  border-bottom: 1px solid #eee;
+}
+.shop-car-dish-total-price{
+  font-size: 50rpx;
+}
+.shop-car-pay{
+  width: 80vw;
+  height: 80rpx;
+  bottom: 20rpx;
+  position: fixed;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  border-radius: 40rpx;
+  text-align: center;
+  line-height: 80rpx;
+  font-size: 26rpx;
+  color: #fff;
+  background-color: #f90000;
 }
