上传代码，更新readme

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -61,7 +61,7 @@
       <view>另需配送费￥5</view>
     </view>
   </view>
-  <button class="{{totalNum?'active-button pay-button':'pay-button'}}">去结算</button>
+  <button class="{{totalPrice > 38 ?'active-button pay-button':'pay-button'}}" bindtap="handleSettle">{{totalPrice < 38?'38元起送':'去结算'}}</button>
 </view>
 <van-popup show="{{ showShopCar }}" position="bottom"
   custom-style="min-height:500rpx;max-height:800rpx" close-on-click-overlay="{{tapClose}}"
