--- a/miniprogram/pages/recharge/recharge.wxml
+++ b/miniprogram/pages/recharge/recharge.wxml
@@ -1,6 +1,6 @@
 <view class="card">
   <view class="card_store">
-    <text>肖安华卤坊</text>
+    <text>肖新星卤坊</text>
     <text>会员储值卡</text>
   </view>
   <view class="card_info">
