--- a/miniprogram/pages/order/order.wxml
+++ b/miniprogram/pages/order/order.wxml
@@ -1,13 +1,12 @@
 <view class="order_container">
-  <view class="order_container_item" wx:for="{{list}}" wx:key="index">
-    <view class="order_container_item_time">订单号：{{item.tradeId}}</view>
-    <!-- <view class="order_container_item_time">开放平台订单号：{{item.orderId}}</view> -->
-    <view class="order_container_item_time">消费时间：{{item.create_time}}</view>
-    <view class="order_container_item_time">消费金额：{{item.account}}元</view>
-    <view class="order_container_item_time">支付方式：{{item.payment}}</view>
-    <view wx:if="{{item.level}}" class="order_container_item_time">会员余额：{{item.overage}}元</view>
-    <view class="order_container_item_tag">{{item.isTakeaway?'外卖订单':'堂食订单'}}</view>
-    <image src="/images/arrow_down.png" class="order-arrow" mode="widthFix"></image>
+  <view class="order_container_item" data-item="{{item}}" bindtap="handleOrderDetail" wx:for="{{list}}" wx:key="index">
+    <view data-item="{{item}}" class="order_container_item_time">订单号：{{item.tradeId}}</view>
+    <view data-item="{{item}}" class="order_container_item_time">消费时间：{{item.create_time}}</view>
+    <view data-item="{{item}}" class="order_container_item_time">消费金额：{{item.account}}元</view>
+    <view data-item="{{item}}" class="order_container_item_time">支付方式：{{item.payment}}</view>
+    <view data-item="{{item}}" wx:if="{{item.level}}" class="order_container_item_time">会员余额：{{item.overage}}元</view>
+    <view  data-item="{{item}}"  class="order_container_item_tag">{{item.isTakeaway?'外卖订单':'堂食订单'}}</view>
+    <image  data-item="{{item}}" wx:if="{{item.isTakeaway}}"  src="/images/arrow_down.png" class="order-arrow" mode="widthFix"></image>
   </view>
 </view>
 <image src="/images/404.png" wx:if="{{list.length == 0}}" class="notfound" mode="aspectFit"></image>
