--- a/miniprogram/pages/shopCar/shopCar.wxss
+++ b/miniprogram/pages/shopCar/shopCar.wxss
@@ -149,7 +149,7 @@
   line-height: 80rpx;
   font-size: 26rpx;
   color: #fff;
-  background-color: #f90000;
+  background-color: #c0392b;
 }
 .shop-car-pwd-container{
   width: 600rpx;
