--- a/miniprogram/pages/home/home.wxss
+++ b/miniprogram/pages/home/home.wxss
@@ -1,6 +1,5 @@
 .home-container{
   height: 100vh;
-  overflow: hidden;
   background-color: #f7f7f7;
 }
 .home-header{
@@ -57,4 +56,10 @@
   text-align: center;
   font-size: 26rpx;
   margin-top: 10rpx;
+}
+.home-img{
+  width: 80vw;
+  display: block;
+  margin: 20rpx  auto;
+  border-radius: 10rpx;
 }
