--- a/miniprogram/pages/order/order.wxss
+++ b/miniprogram/pages/order/order.wxss
@@ -24,10 +24,11 @@
   color: #fff;
 }
 .order-arrow{
-  width: 100rpx;
+  font-size: 24rpx;
+  color: #999;
   position: absolute;
   right: 20rpx;
-  top:calc(50% - 50rpx)
+  bottom: 20rpx;
 }
 .notfound{
   width: 80vw;
